update connected root segment counting

--- a/processing_scripts/tutorial_newCamera.ipynb
+++ b/processing_scripts/tutorial_newCamera.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,12 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# draw detected roots\n",
-    "rs.draw_detected_roots(roots, im)"
+    "im_out = rs.draw_detected_roots(roots, im, root_thickness = 7, minimalBranchLength = 10)\n",
+    "# measure root properties and show as table\n",
+    "rs.measure_roots(roots, root_thickness = 7, minimalBranchLength = 10)"
    ]
   },
   {
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,12 +296,12 @@
     "    # clean detected roots\n",
     "    roots = rs.clean_predicted_roots(predicted_segmentation, small_objects_threshold=150, closing_diameter = 4)\n",
     "    # compute root properties\n",
-    "    results_df = rs.measure_roots(roots)\n",
+    "    results_df = rs.measure_roots(roots, root_thickness = 7, minimalBranchLength = 10)\n",
     "    results_df[\"fname\"] = fname\n",
     "    # append to results list\n",
     "    all_results.append(results_df)\n",
     "    # save image for quality check\n",
-    "    rs.save_detected_roots_im(roots, im, fname[:-4] + \"result.png\")\n",
+    "    rs.save_detected_roots_im(roots, im, fname[:-4] + \"result.png\", root_thickness = 7, minimalBranchLength = 10)\n",
     "\n",
     "\n",
     "pd.concat(all_results).to_excel(\"../sample_results/measurements.xlsx\")\n"
