utils and tutorial added

--- a/tests/tutorial_newCamera.ipynb
+++ b/tests/tutorial_newCamera.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "im, names, vertices_s, vertices_e = rs.load_training_image(img_file = \"../sample_newMachine/AG00IHWX_000000.jpg\",\n",
-    "                                                        root_traces_file = \"../sample_newMachine/AG00IHWX_000000 vertices.csv\",\n",
+    "im, names, vertices_s, vertices_e = rs.load_training_image(img_file = \"../sample_newMachine/AG00DA6Z_000002.jpg\",\n",
+    "                                                        root_traces_file = \"../sample_newMachine/AG00DA6Z_000002 vertices.csv\",\n",
     "                                                        auto_transform=False)\n",
     "\n",
     "#transform into row-column coordinates\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,47 @@
     "\n",
     "# create training data labels\n",
     "training_labels = rs.create_training_data(root_buffer_background)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x2e53a6506d0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.ion()\n",
+    "plt.imshow(root_buffer_background)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x2e53808a310>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.imshow(training_labels)"
    ]
   },
   {
