--- a/tests/tutorial_package.ipynb
+++ b/tests/tutorial_package.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manual of root_segmentor_VIB  (NEW CAMERA)\n",
+    "# Tutorial notebook of rhsegmentor\n",
     "\n",
-    "NOTE: this manual is identical to 'tutorial.ipynb' but is adapted to the new camera setup (basically means that a new set of parameters is needed for creating training data, computing features, selecting roots etc.)"
+    "This tutorial guides you throuhg the main use cases of the `rhsegmentor` package."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sep 0: imports\n",
+    "### Step 0: imports\n",
     "\n",
     "Import the required modules"
    ]
@@ -27,7 +27,8 @@
     "import os\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
-    "import root_segmentor_VIB as rs\n",
+    "import rhsegmentor as rh\n",
+    "from rhsegmentor import utils\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
@@ -49,13 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im, names, vertices_s, vertices_e = rs.load_training_image(img_file = \"../sample_newMachine/AG00IHWX_000000.jpg\",\n",
-    "                                                        root_traces_file = \"../sample_newMachine/AG00IHWX_000000 vertices.csv\",\n",
+    "im, names, vertices_s, vertices_e = rh.load_training_image(img_file = \"../sample_newMachine/AG00DA6Z_000002.jpg\",\n",
+    "                                                        root_traces_file = \"../sample_newMachine/AG00DA6Z_000002 vertices.csv\",\n",
     "                                                        auto_transform=False)\n",
     "\n",
     "#transform into row-column coordinates\n",
-    "vertices_s_RC = rs.flip_XY_RC(vertices_s)\n",
-    "vertices_e_RC = rs.flip_XY_RC(vertices_e)"
+    "vertices_s_RC = utils.flip_XY_RC(vertices_s)\n",
+    "vertices_e_RC = utils.flip_XY_RC(vertices_e)"
    ]
   },
   {
@@ -74,11 +75,19 @@
    "outputs": [],
    "source": [
     "# create root mask\n",
-    "root_mask = rs.create_root_mask(im, vertices_s_RC, vertices_e_RC, dilatation_radius= 2)\n",
-    "root_buffer_background = rs.create_root_buffer_background_image(root_mask, buffer_radius = 5, no_root_radius = 30)\n",
+    "# root_mask = rs.create_root_mask(im, vertices_s_RC, vertices_e_RC, dilatation_radius= 2)\n",
+    "# root_buffer_background = rs.create_root_buffer_background_image(root_mask, buffer_radius = 5, no_root_radius = 30)\n",
     "\n",
     "# create training data labels\n",
-    "training_labels = rs.create_training_data(root_buffer_background)"
+    "# training_labels = rs.create_training_data(root_buffer_background)\n",
+    "\n",
+    "# create segmentation mask\n",
+    "mask = rh.root_segmentation_mask(im = im,\n",
+    "                          vertices_s_RC = vertices_s_RC,\n",
+    "                          vertices_e_RC = vertices_e_RC,\n",
+    "                          dilatation_radius= 2,\n",
+    "                          buffer_radius = 5,\n",
+    "                          no_root_radius = 30)"
    ]
   },
   {
@@ -94,12 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.subplot(1, 3, 1)\n",
-    "rs.show_traces(vertices_s, vertices_e, im)\n",
-    "plt.subplot(1, 3, 2)\n",
-    "rs.show_traces(vertices_s, vertices_e, root_buffer_background)\n",
-    "plt.subplot(1, 3, 3)\n",
-    "rs.show_traces(vertices_s, vertices_e, training_labels)"
+    "plt.subplot(1, 2, 1)\n",
+    "rh.show_traces(vertices_s, vertices_e, im)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "rh.show_traces(vertices_s, vertices_e, mask)"
    ]
   },
   {
@@ -124,20 +131,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\GIT\\Research\\root_segmentor\\tests\\..\\root_segmentor_VIB.py:58: UserWarning: loadtxt: input contained no data: \"../sample_newMachine/DMSO000011 vertices.csv\"\n",
-      "  vertices = np.loadtxt(root_traces_file,\n",
-      "c:\\GIT\\Research\\root_segmentor\\tests\\..\\root_segmentor_VIB.py:62: UserWarning: loadtxt: input contained no data: \"../sample_newMachine/DMSO000011 vertices.csv\"\n",
-      "  names = np.loadtxt(root_traces_file,\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Problem processing ../sample_newMachine/DMSO000011.jpg\n"
+      "Problem processing ../sample_newMachine/smallAG003B8X000001.jpg\n",
+      "Traceback of --  ../sample_newMachine/smallAG003B8X000001.jpg\n",
+      "End traceback --  ../sample_newMachine/smallAG003B8X000001.jpg\n",
+      "Problem processing ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
+      "Traceback of --  ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
+      "End traceback --  ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
+      "Problem processing ../sample_newMachine/smallAG00IHWX_000007.jpg\n",
+      "Traceback of --  ../sample_newMachine/smallAG00IHWX_000007.jpg\n",
+      "End traceback --  ../sample_newMachine/smallAG00IHWX_000007.jpg\n"
      ]
     },
     {
@@ -145,29 +150,80 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\root_segmentor_VIB.py\", line 649, in imgs_to_XY_data\n",
-      "    training_labels = create_training_data(root_buffer_background)\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\root_segmentor_VIB.py\", line 247, in create_training_data\n",
-      "    low_idx = np.min(tmp)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 2953, in min\n",
-      "    return _wrapreduction(a, np.minimum, 'min', axis, None, out,\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 88, in _wrapreduction\n",
-      "    return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n",
-      "ValueError: zero-size array to reduction operation minimum which has no identity\n"
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
+      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
+      "    im = io.imread(img_file)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
+      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
+      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
+      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
+      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
+      "    self._parse_uri(uri)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
+      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
+      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG003B8X000001.jpg'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
+      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
+      "    im = io.imread(img_file)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
+      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
+      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
+      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
+      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
+      "    self._parse_uri(uri)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
+      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
+      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG00DA6Z_000002.jpg'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
+      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
+      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
+      "    im = io.imread(img_file)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
+      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
+      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
+      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
+      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
+      "    self._parse_uri(uri)\n",
+      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
+      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
+      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG00IHWX_000007.jpg'\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# compute FEATURES and LABELS for each image in a given folder\n",
-    "files_list = ['../sample_newMachine/'+f for f in os.listdir('../sample_newMachine') if f[-3:] == \"jpg\"]\n",
-    "rs.imgs_to_XY_data(img_file_list = files_list,\n",
+    "files_list = ['../sample_newMachine/small/'+f for f in os.listdir('../sample_newMachine/small/') if f[-3:] == \"jpg\"]\n",
+    "rh.imgs_to_XY_data(img_file_list = files_list,\n",
     "                    root_traces_file_list = None,\n",
     "                    auto_transform = False,\n",
     "                    dilatation_radius = 2,\n",
     "                    buffer_radius = 5,\n",
     "                    no_root_radius = 30,\n",
-    "                    sigma_max = 10)"
+    "                    sigma_max = 10,\n",
+    "                    save_masks_as_im = True)"
    ]
   },
   {
@@ -233,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +887,7 @@
        "42        76.059352                   76.059352  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
