save folder added

--- a/tests/tutorial_package.ipynb
+++ b/tests/tutorial_package.ipynb
@@ -31,6 +31,8 @@
     "from rhsegmentor import utils\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from skimage import io\n",
     "\n",
     "%matplotlib tk\n"
    ]
@@ -127,91 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem processing ../sample_newMachine/smallAG003B8X000001.jpg\n",
-      "Traceback of --  ../sample_newMachine/smallAG003B8X000001.jpg\n",
-      "End traceback --  ../sample_newMachine/smallAG003B8X000001.jpg\n",
-      "Problem processing ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
-      "Traceback of --  ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
-      "End traceback --  ../sample_newMachine/smallAG00DA6Z_000002.jpg\n",
-      "Problem processing ../sample_newMachine/smallAG00IHWX_000007.jpg\n",
-      "Traceback of --  ../sample_newMachine/smallAG00IHWX_000007.jpg\n",
-      "End traceback --  ../sample_newMachine/smallAG00IHWX_000007.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
-      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
-      "    im = io.imread(img_file)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
-      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
-      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
-      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
-      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
-      "    self._parse_uri(uri)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
-      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
-      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG003B8X000001.jpg'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
-      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
-      "    im = io.imread(img_file)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
-      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
-      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
-      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
-      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
-      "    self._parse_uri(uri)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
-      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
-      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG00DA6Z_000002.jpg'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\batchprocessing.py\", line 96, in imgs_to_XY_data\n",
-      "    im, names, vertices_s, vertices_e = dl.load_training_image(img_file,\n",
-      "  File \"c:\\GIT\\Research\\root_segmentor\\tests\\..\\rhsegmentor\\dataloader.py\", line 44, in load_training_image\n",
-      "    im = io.imread(img_file)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_io.py\", line 53, in imread\n",
-      "    img = call_plugin('imread', fname, plugin=plugin, **plugin_args)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\manage_plugins.py\", line 205, in call_plugin\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\skimage\\io\\_plugins\\imageio_plugin.py\", line 11, in imread\n",
-      "    out = np.asarray(imageio_imread(*args, **kwargs))\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\v3.py\", line 53, in imread\n",
-      "    with imopen(uri, \"r\", **plugin_kwargs) as img_file:\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\imopen.py\", line 113, in imopen\n",
-      "    request = Request(uri, io_mode, format_hint=format_hint, extension=extension)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 247, in __init__\n",
-      "    self._parse_uri(uri)\n",
-      "  File \"c:\\Users\\jverwaer\\.conda\\envs\\napari-env\\lib\\site-packages\\imageio\\core\\request.py\", line 407, in _parse_uri\n",
-      "    raise FileNotFoundError(\"No such file: '%s'\" % fn)\n",
-      "FileNotFoundError: No such file: 'c:\\GIT\\Research\\root_segmentor\\sample_newMachine\\smallAG00IHWX_000007.jpg'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# compute FEATURES and LABELS for each image in a given folder\n",
@@ -223,7 +143,8 @@
     "                    buffer_radius = 5,\n",
     "                    no_root_radius = 30,\n",
     "                    sigma_max = 10,\n",
-    "                    save_masks_as_im = True)"
+    "                    save_masks_as_im = True,\n",
+    "                    save_dir = '../sample_newMachine/small/features')"
    ]
   },
   {
@@ -235,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create training datasets\n",
-    "features_file_list = ['../sample_newMachine/'+f for f in os.listdir('../sample_newMachine') if f[-3:] == \"npy\" and \"FEATURES\" in f]\n",
-    "X, Y = rs.compile_training_dataset_from_precomputed_features(features_file_list, sample_fraction=(1.0, 1.0))"
+    "features_file_list = ['../sample_newMachine/small/features/'+f for f in os.listdir('../sample_newMachine/small/features/') if f[-3:] == \"npy\" and \"FEATURES\" in f]\n",
+    "X, Y = rh.compile_training_dataset_from_precomputed_features(features_file_list, sample_fraction=(1.0, 1.0))"
    ]
   },
   {
@@ -255,27 +176,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../models/RF_AGO_000and002_NTrees-100.joblib']"
+       "['../models/RF_AGO_000and002_NTrees-100_TEST.joblib']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fit random forest classifier\n",
-    "clf = rs.RandomForestClassifier(n_estimators=100, n_jobs=-1,\n",
+    "# fit random forest classifier (any other classifier)\n",
+    "clf = RandomForestClassifier(n_estimators=100, n_jobs=-1,\n",
     "                            max_depth=10, max_samples=0.05)\n",
     "clf.fit(X, Y)\n",
     "# dump the model to a file\n",
-    "rs.dump(clf, '../models/RF_AGO_000and002_NTrees-100.joblib')"
+    "rh.dump_model(clf, '../models/RF_AGO_000and002_NTrees-100_TEST.joblib')"
    ]
   },
   {
@@ -289,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = rs.load('../models/RF_AGO_000and002_NTrees-100.joblib')"
+    "clf = rh.load_model('../models/RF_AGO_000and002_NTrees-100_TEST.joblib')"
    ]
   },
   {
@@ -309,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im = rs.io.imread(\"../sample_newMachine/test_cases/AG00IHWX_000000.jpg\")\n",
+    "im = io.imread(\"../sample_newMachine/test_cases/AG00IHWX_000000.jpg\")\n",
     "# compute features\n",
     "features = rs.im2features(im, sigma_max = 10)\n",
     "# predict\n",
