--- a/tests/tutorial_package.ipynb
+++ b/tests/tutorial_package.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,17 +226,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'rhsegmentor' has no attribute 'im2features'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m im \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../sample_newMachine/test_cases/AG00IHWX_000000.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# compute features\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m features \u001b[38;5;241m=\u001b[39m \u001b[43mrh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mim2features\u001b[49m(im, sigma_max \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# predict\u001b[39;00m\n\u001b[0;32m      5\u001b[0m predicted_segmentation \u001b[38;5;241m=\u001b[39m rs\u001b[38;5;241m.\u001b[39mpredict_segmentor(clf, features)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'rhsegmentor' has no attribute 'im2features'"
+     ]
+    }
+   ],
    "source": [
     "im = io.imread(\"../sample_newMachine/test_cases/AG00IHWX_000000.jpg\")\n",
     "# compute features\n",
-    "features = rs.im2features(im, sigma_max = 10)\n",
+    "features = rh.im2features(im, sigma_max = 10)\n",
     "# predict\n",
-    "predicted_segmentation = rs.predict_segmentor(clf, features)\n",
+    "predicted_segmentation = rh.predict_segmentor(clf, features)\n",
     "# clean detected roots\n",
-    "roots = rs.clean_predicted_roots(predicted_segmentation, small_objects_threshold=150, closing_diameter = 4)"
+    "roots = rh.clean_predicted_roots(predicted_segmentation, small_objects_threshold=150, closing_diameter = 4)"
    ]
   },
   {
